[workspace]
resolver = "2"

members = [
    "modcraft_app",
    "modcraft_lib",
    "thread_test",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
