[package]
name = "modcraft_app"
version = "0.1.0"
edition = "2021"

[features]
client = []

[dependencies]
modcraft_lib = { path = "../modcraft_lib" }

# I am including the dynamic linking flag here, should be removed for release (haha... release)
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
