[package]
name = "modcraft_lib"
version = "0.1.0"
authors = ["Josh Bedwell <rcxwhiz@gmail.com>"]
edition = "2021"
rust-version = "1.73"
description = "A library that the game ModCraft and its mods depend on."

[dependencies]
# I am including the dynamic linking flag here, should be removed for release (haha... release)
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
